force-app/main/default/objects/BatchQuery__mdt/BatchQuery__mdt.object-meta.xml
<CustomObject>
    <label>BatchQuery</label>
    <pluralLabel>BatchQuerys</pluralLabel>
</CustomObject>