force-app/main/default/objects/BatchQuery__mdt/fields/BatchClass__c.field-meta.xml
<CustomField>
    <fullName>BatchClass__c</fullName>
    <label>BatchClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>