force-app/main/default/objects/BatchQuery__mdt/fields/batchNumber__c.field-meta.xml
<CustomField>
    <fullName>batchNumber__c</fullName>
    <label>batchNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>