force-app/main/default/objects/BatchQuery__mdt/fields/fromDate__c.field-meta.xml
<CustomField>
    <fullName>fromDate__c</fullName>
    <label>fromDate</label>
    <type>Date</type>
</CustomField>