force-app/main/default/objects/BatchQuery__mdt/fields/ToDate__c.field-meta.xml
<CustomField>
    <fullName>ToDate__c</fullName>
    <label>ToDate</label>
    <type>Date</type>
</CustomField>